[package]
name = "fitness-tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio", "macros"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
actix-rt = "2"
chrono = { version = "0.4", features = ["serde"] }
