[package]
name = "fitness-tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7.4", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
actix-rt = "2"
chrono = { version = "0.4", features = ["serde"] }
argon2 = "0.5"
uuid = { version = "1.8", features = ["serde"] }
rand_core = "=0.6.4"
actix-session = { version = "0.8", features = ["cookie-session"] }
actix-identity = "0.7"
cookie = "0.17"
password-hash = "0.5"
rand = "0.8"

